<?xml version="1.0" encoding="utf-8"?>
<!--
 * @Author Nicolaj & Dan - Initial contribution
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_location_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_location_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_location_name_hint"
            android:inputType="textPersonName"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:gravity="right|bottom"
        android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_location_radius_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_location_radius_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_location_radius_hint"
            android:inputType="number"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Meters"
            android:textSize="18dp"
            android:textColor="@color/black_text_main"
            android:paddingRight="16dp"
            android:paddingBottom="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/new_location_cancel_brn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:layout_marginRight="8dp"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/new_location_mark_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_location_mark"/>


    </LinearLayout>
</LinearLayout>