<?xml version="1.0" encoding="utf-8"?>
<!--
 * @Author Nicolaj & Aslan - Initial contribution
 * @Author Nicolaj & Dan - GUI update
-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:background="@drawable/main_background"
            android:orientation="vertical"
            android:padding="8dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/drawer_user_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif"
                android:gravity="bottom"
                android:padding="8dp"
                android:background="#80ffffff"
                android:hint="@string/main_user_hint"
                android:lines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />


        </LinearLayout>



        <LinearLayout
            android:id="@+id/drawer_content_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:paddingTop="8dp">
<!--
            <android.support.design.widget.TextInputLayout
                android:padding="8dp"
                android:id="@+id/drawer_user_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/drawer_user_et"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="user"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:padding="8dp"
                android:id="@+id/drawer_name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/drawer_name_et"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="name"/>
            </android.support.design.widget.TextInputLayout>
            -->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:padding="8dp">

                <TextView
                    android:textColor="@color/black_text_main"
                    android:textSize="18dp"
                    android:text="@string/main_start_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/drawer_service_switch"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="right"
                    android:enabled="true"
                    android:layout_marginRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drawer_home_location_ll"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/black_text_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:text="@string/main_home"/>

                <View
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    />
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp">

                    <ImageView
                        android:id="@+id/mark_home_imgview"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="right"
                        android:background="#00ffffff"
                        android:visibility="visible"
                        android:src="@drawable/ic_home_red" />

                    <ProgressBar
                        android:id="@+id/mark_home_progress"
                        android:visibility="invisible"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:indeterminateTintMode="src_in"
                        android:indeterminateTint="@color/colorAccent"
                        />


                </FrameLayout>
            </LinearLayout>

            <View
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                />

            <ListView
                android:id="@+id/drawer_location_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@color/white_solid"/>


        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:src="@drawable/ic_plus_white"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.design.widget.CoordinatorLayout>